sortable list box

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#/multiSelectDropdown">Multi Select Dropdown</a></li>
-                        <li><a href="#/view2">view2</a></li>
+                        <li><a href="#/sortableListBox">Sortable List Box</a></li>
                     </ul>
                 </div>
             </div>
@@ -37,10 +37,12 @@
             <div data-ng-view></div>
         </div>
 
+        <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>        
+        <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
         <script src="app.js"></script>
         <script src="multiSelectDropdown/directive.js"></script>
+        <script src="sortableListBox/directive.js"></script>
     </body>
 </html>
