add source link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#/multiSelectDropdown">Multi Select Dropdown</a></li>
                         <li><a href="#/sortableListBox">Sortable List Box</a></li>
+                        <li><a href="https://github.com/admiller97/angularDirectives">GitHub Source</a></li>
                     </ul>
                 </div>
             </div>
