fix refresh issue

--- a/sortableListBoxDemo.html
+++ b/sortableListBoxDemo.html
@@ -1,4 +1,4 @@
-<p>Note: this requires sortable from jQuery UI.  TODO: sortupdate event not triggering reliably.</p>
+<p>Note: this requires sortable from jQuery UI.
 
 <div class="row">
     <div class="col-sm-4">
