--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#/multiSelectDropdown">Multi Select Dropdown</a></li>
                         <li><a href="#/sortableListBox">Sortable List Box</a></li>
+                        <li><a href="#/numericInput">Numeric Input</a></li>
                         <li><a href="https://github.com/admiller97/angularDirectives">GitHub Source</a></li>
                     </ul>
                 </div>
@@ -38,12 +39,13 @@
             <div data-ng-view></div>
         </div>
 
-        <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
+        <script src="//code.jquery.com/jquery-2.1.1.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.js"></script>
         <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
         <script src="app.js"></script>
         <script src="multiSelectDropdown/directive.js"></script>
         <script src="sortableListBox/directive.js"></script>
+        <script src="numericInput/directive.js"></script>
     </body>
 </html>
